# Treinamento-Fabrica

./: README.md  pyproject.toml
myenv/Scripts/: activate  activate.bat  activate.fish  activate.xsh
tests/integration/: test_categoria.py
tutorialpress/: settings.py  urls.py
tutorialpress/core/: router.py
tutorialpress/core/migrations/: 0001_initial.py  0002_auto_20200306_1719.py
tutorialpress/core/models/: __init__.py  categoria.py  publicacao.py
tutorialpress/core/serializers/: __init__.py  categoria.py  publicacao.py
tutorialpress/core/views/: __init__.py  categoria.py  publicacao.py
virtualenv/myenv/: pyvenv.cfg
virtualenv/myenv/Scripts/: activate  activate.bat  activate.fish  activate.xsh  django-admin.py
virtualenv/myenv/Scripts/tutorialpress_win/: manage.py
virtualenv/myenv/Scripts/tutorialpress_win/tutorialpress_win/: asgi.py  settings.py  urls.py  wsgi.py
